--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require" : {
 		"framework-interop/http-module-interface" : "~1.0",
 		"mouf/interop.silex.di": "~2.0",
-		"mouf/silex-middleware": "~1.0"
+		"mouf/silex-middleware": "~1.0",
+	  	"mouf/prefixer-container": "~1.0"
 	},
 	"autoload" : {
 		"psr-4" : {
