Adding autoinstall meta

--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,15 @@
 		"psr-4" : {
 			"Interop\\Framework\\Silex\\" : "src/"
 		}
-	}
+	},
+    "framework-interop": {
+		"module-factory": [
+		  {
+			  "name" : "silex-framework-module",
+			  "description" : "Silex module",
+			  "module" : "$silexModule = new Interop\\Framework\\Silex\\SilexFrameworkModule()",
+			  "priority" : 10
+		  }
+		]
+  }
 }
